syntax = "proto3";

package auth.user.password.reset.api;

import "auth/ticket/z_protobuf/api.proto";

message RequestResetTokenApiRequestPb {
    string login_id = 1;
}
message RequestResetTokenApiResponsePb {
    bool success = 1;
    RequestResetTokenApiErrorPb err = 3;
}
message RequestResetTokenApiErrorPb {
    RequestResetTokenApiErrorKindPb kind = 1;
}
enum RequestResetTokenApiErrorKindPb {
    INVALID_REQUEST = 0;
}

message ResetPasswordApiRequestPb {
    string reset_token = 1;
    string login_id = 2;
    string password = 3;
}
message ResetPasswordApiResponsePb {
    bool success = 1;
    auth.ticket.api.AuthenticateApiResponsePb value = 2;
    ResetPasswordApiErrorPb err = 3;
}
message ResetPasswordApiErrorPb {
    ResetPasswordApiErrorKindPb kind = 1;
}
enum ResetPasswordApiErrorKindPb {
    INVALID_RESET = 0;
    ALREADY_RESET = 1;
}
